Fixed spacing issues caused by the timer tweaks

--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@ main {
 }
 
 #controls .control {
-    margin: 10rem;
+    margin: 7rem;
 }
 
 #controls .buttons-wrapper {
